examples/test/testpolicy2626.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2626
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key49: value17
      key47: value35
      key2: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value49
          key11: value15
      podSelector:
        matchLabels:
          key10: value26
          key1: value45
          key33: value11
